# projects-organizer

./: CHANGELOG.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
src/projects_organizer/: __init__.py
tests/: conftest.py  test_list.py  test_main.py  test_show.py  test_validate.py
