[project]
name = "projects-organizer"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Romain Giraud", email = "dev@romaingiraud.com" }]
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.23.0",
  "python-frontmatter>=1.1.0",
  "pyyaml>=6.0.2",
  "rich>=14.0.0",
  "typer>=0.15.3",
]
#dynamic = ["version"]
version = "0.1.0"

[project.scripts]
projects-organizer = "projects_organizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["python-semantic-release>=9.21.1"]

#[tool.hatch.version]
#path = "src/projects_organizer/__init__.py"

[tool.semantic_release]
version_variable = ["pyproject.toml:project.version"]
build_command = "uv build"
#version_toml = ["pyproject.toml:project.version"]
#version_variables = ["src/projects_organizer/__init__.py:__version__"]
